--- a/git-workshop/index.html
+++ b/git-workshop/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Home page</h1>
+    <h1>welcome .....</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nihil quisquam at tenetur mollitia, voluptatem quas tempora sit architecto in, quasi molestiae obcaecati iste expedita asperiores perferendis, nobis optio neque.</p>
     
 </body>
